@@ -88,6 +88,14 @@
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
 		lv2:index 9 ;
+		lv2:symbol "GEN1_ENVTIME" ;
+		lv2:name "GEN1 Env.Time" ;
+		lv2:default 0.2 ;
+		lv2:minimum 0.1 ;
+		lv2:maximum 1.0 ;
+	], [
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 10 ;
 		lv2:symbol "DCF1_CUTOFF" ;
 		lv2:name "DCF1 Cutoff" ;
 		lv2:default 1.0 ;
@@ -95,7 +103,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 10 ;
+		lv2:index 11 ;
 		lv2:symbol "DCF1_RESO" ;
 		lv2:name "DCF1 Resonance" ;
 		lv2:default 0.0 ;
@@ -103,7 +111,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 11 ;
+		lv2:index 12 ;
 		lv2:symbol "DCF1_TYPE" ;
 		lv2:name "DCF1 Type" ;
 		lv2:portProperty lv2:integer ;
@@ -116,7 +124,7 @@
 		lv2:maximum 3.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 12 ;
+		lv2:index 13 ;
 		lv2:symbol "DCF1_SLOPE" ;
 		lv2:name "DCF1 Slope" ;
 		lv2:portProperty lv2:integer ;
@@ -127,7 +135,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 13 ;
+		lv2:index 14 ;
 		lv2:symbol "DCF1_ENVELOPE" ;
 		lv2:name "DCF1 Envelope" ;
 		lv2:default 1.0 ;
@@ -135,7 +143,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 14 ;
+		lv2:index 15 ;
 		lv2:symbol "DCF1_ATTACK" ;
 		lv2:name "DCF1 Attack" ;
 		lv2:default 0.0 ;
@@ -143,7 +151,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 15 ;
+		lv2:index 16 ;
 		lv2:symbol "DCF1_DECAY1" ;
 		lv2:name "DCF1 Decay 1" ;
 		lv2:default 0.5 ;
@@ -151,7 +159,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 16 ;
+		lv2:index 17 ;
 		lv2:symbol "DCF1_LEVEL2" ;
 		lv2:name "DCF1 Level 2" ;
 		lv2:default 0.2 ;
@@ -159,7 +167,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 17 ;
+		lv2:index 18 ;
 		lv2:symbol "DCF1_DECAY2" ;
 		lv2:name "DCF1 Decay 2" ;
 		lv2:default 0.5 ;
@@ -167,7 +175,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 18 ;
+		lv2:index 19 ;
 		lv2:symbol "LFO1_SHAPE1" ;
 		lv2:name "LFO1 Wave Shape 1" ;
 		lv2:portProperty lv2:integer ;
@@ -180,7 +188,7 @@
 		lv2:maximum 3.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 19 ;
+		lv2:index 20 ;
 		lv2:symbol "LFO1_WIDTH" ;
 		lv2:name "LFO1 Wave Width" ;
 		lv2:default 1.0 ;
@@ -188,7 +196,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 20 ;
+		lv2:index 21 ;
 		lv2:symbol "LFO1_RATE" ;
 		lv2:name "LFO1 Rate" ;
 		lv2:default 0.5 ;
@@ -196,7 +204,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 21 ;
+		lv2:index 22 ;
 		lv2:symbol "LFO1_SWEEP" ;
 		lv2:name "LFO1 Sweep" ;
 		lv2:default 0.0 ;
@@ -204,7 +212,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 22 ;
+		lv2:index 23 ;
 		lv2:symbol "LFO1_PITCH" ;
 		lv2:name "LFO1 Pitch" ;
 		lv2:default 0.0 ;
@@ -212,7 +220,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 23 ;
+		lv2:index 24 ;
 		lv2:symbol "LFO1_CUTOFF" ;
 		lv2:name "LFO1 Cutoff" ;
 		lv2:default 0.0 ;
@@ -220,7 +228,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 24 ;
+		lv2:index 25 ;
 		lv2:symbol "LFO1_RESO" ;
 		lv2:name "LFO1 Resonance" ;
 		lv2:default 0.0 ;
@@ -228,7 +236,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 25 ;
+		lv2:index 26 ;
 		lv2:symbol "LFO1_PANNING" ;
 		lv2:name "LFO1 Panning" ;
 		lv2:default 0.0 ;
@@ -236,7 +244,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 26 ;
+		lv2:index 27 ;
 		lv2:symbol "LFO1_VOLUME" ;
 		lv2:name "LFO1 Volume" ;
 		lv2:default 0.0 ;
@@ -244,7 +252,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 27 ;
+		lv2:index 28 ;
 		lv2:symbol "LFO1_ATTACK" ;
 		lv2:name "LFO1 Attack" ;
 		lv2:default 0.0 ;
@@ -252,7 +260,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 28 ;
+		lv2:index 29 ;
 		lv2:symbol "LFO1_DECAY1" ;
 		lv2:name "LFO1 Decay 1" ;
 		lv2:default 0.5 ;
@@ -260,7 +268,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 29 ;
+		lv2:index 30 ;
 		lv2:symbol "LFO1_LEVEL2" ;
 		lv2:name "LFO1 Level 2" ;
 		lv2:default 0.2 ;
@@ -268,7 +276,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 30 ;
+		lv2:index 31 ;
 		lv2:symbol "LFO1_DECAY2" ;
 		lv2:name "LFO1 Decay 2" ;
 		lv2:default 0.5 ;
@@ -276,7 +284,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 31 ;
+		lv2:index 32 ;
 		lv2:symbol "DCA1_VOLUME" ;
 		lv2:name "DCA1 Volume" ;
 		lv2:default 0.5 ;
@@ -284,7 +292,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 32 ;
+		lv2:index 33 ;
 		lv2:symbol "DCA1_ATTACK" ;
 		lv2:name "DCA1 Attack" ;
 		lv2:default 0.0 ;
@@ -292,7 +300,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 33 ;
+		lv2:index 34 ;
 		lv2:symbol "DCA1_DECAY1" ;
 		lv2:name "DCA1 Decay1" ;
 		lv2:default 0.5 ;
@@ -300,7 +308,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 34 ;
+		lv2:index 35 ;
 		lv2:symbol "DCA1_LEVEL2" ;
 		lv2:name "DCA1 Level 2" ;
 		lv2:default 0.2 ;
@@ -308,7 +316,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 35 ;
+		lv2:index 36 ;
 		lv2:symbol "DCA1_DECAY2" ;
 		lv2:name "DCA1 Decay 2" ;
 		lv2:default 0.5 ;
@@ -316,7 +324,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 36 ;
+		lv2:index 37 ;
 		lv2:symbol "OUT1_WIDTH" ;
 		lv2:name "OUT1 Stereo Width" ;
 		lv2:default 0.0 ;
@@ -324,7 +332,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 37 ;
+		lv2:index 38 ;
 		lv2:symbol "OUT1_PANNING" ;
 		lv2:name "OUT1 Panning" ;
 		lv2:default 0.0 ;
@@ -332,7 +340,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 38 ;
+		lv2:index 39 ;
 		lv2:symbol "OUT1_VOLUME" ;
 		lv2:name "OUT1 Volume" ;
 		lv2:default 0.5 ;
@@ -341,7 +349,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 39 ;
+		lv2:index 40 ;
 		lv2:symbol "DEF1_PITCHBEND" ;
 		lv2:name "DEF1 Pitchbend" ;
 		lv2:default 0.2 ;
@@ -349,7 +357,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 40 ;
+		lv2:index 41 ;
 		lv2:symbol "DEF1_MODWHEEL" ;
 		lv2:name "DEF1 Modwheel" ;
 		lv2:default 0.2 ;
@@ -357,7 +365,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 41 ;
+		lv2:index 42 ;
 		lv2:symbol "DEF1_PRESSURE" ;
 		lv2:name "DEF1 Pressure" ;
 		lv2:default 0.2 ;
@@ -365,7 +373,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 42 ;
+		lv2:index 43 ;
 		lv2:symbol "DEF1_VELOCITY" ;
 		lv2:name "DEF1 Velocity" ;
 		lv2:default 0.2 ;
@@ -373,7 +381,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 43 ;
+		lv2:index 44 ;
 		lv2:symbol "DEF1_CHANNEL" ;
 		lv2:name "DEF1 Channel" ;
 		lv2:portProperty lv2:integer ;
@@ -382,7 +390,7 @@
 		lv2:maximum 16.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 44 ;
+		lv2:index 45 ;
 		lv2:symbol "DEF1_NOTEOFF" ;
 		lv2:name "DEF1 Note Off" ;
 		lv2:portProperty lv2:integer ;
@@ -394,7 +402,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 45 ;
+		lv2:index 46 ;
 		lv2:symbol "CHO1_WET" ;
 		lv2:name "Chorus Wet" ;
 		lv2:default 0.0 ;
@@ -402,7 +410,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 46 ;
+		lv2:index 47 ;
 		lv2:symbol "CHO1_DELAY" ;
 		lv2:name "Chorus Delay" ;
 		lv2:default 0.5 ;
@@ -410,7 +418,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 47 ;
+		lv2:index 48 ;
 		lv2:symbol "CHO1_FEEDB" ;
 		lv2:name "Chorus Feedback" ;
 		lv2:default 0.5 ;
@@ -418,7 +426,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 48 ;
+		lv2:index 49 ;
 		lv2:symbol "CHO1_RATE" ;
 		lv2:name "Chorus Rate" ;
 		lv2:default 0.5 ;
@@ -426,7 +434,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 49 ;
+		lv2:index 50 ;
 		lv2:symbol "CHO1_MOD" ;
 		lv2:name "Chorus Modulation" ;
 		lv2:default 0.5 ;
@@ -435,7 +443,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 50 ;
+		lv2:index 51 ;
 		lv2:symbol "FLA1_WET" ;
 		lv2:name "Flanger Wet" ;
 		lv2:default 0.0 ;
@@ -443,7 +451,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 51 ;
+		lv2:index 52 ;
 		lv2:symbol "FLA1_DELAY" ;
 		lv2:name "Flanger Delay" ;
 		lv2:default 0.5 ;
@@ -451,7 +459,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 52 ;
+		lv2:index 53 ;
 		lv2:symbol "FLA1_FEEDB" ;
 		lv2:name "Flanger Feedback" ;
 		lv2:default 0.5 ;
@@ -459,7 +467,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 53 ;
+		lv2:index 54 ;
 		lv2:symbol "FLA1_DAFT" ;
 		lv2:name "Flanger Daft" ;
 		lv2:default 0.0 ;
@@ -468,7 +476,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 54 ;
+		lv2:index 55 ;
 		lv2:symbol "PHA1_WET" ;
 		lv2:name "Phaser Wet" ;
 		lv2:default 0.0 ;
@@ -476,7 +484,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 55 ;
+		lv2:index 56 ;
 		lv2:symbol "PHA1_RATE" ;
 		lv2:name "Phaser Rate" ;
 		lv2:default 0.5 ;
@@ -484,7 +492,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 56 ;
+		lv2:index 57 ;
 		lv2:symbol "PHA1_FEEDB" ;
 		lv2:name "Phaser Feedback" ;
 		lv2:default 0.5 ;
@@ -492,7 +500,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 57 ;
+		lv2:index 58 ;
 		lv2:symbol "PHA1_DEPTH" ;
 		lv2:name "Phaser Depth" ;
 		lv2:default 0.5 ;
@@ -500,7 +508,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 58 ;
+		lv2:index 59 ;
 		lv2:symbol "PHA1_DAFT" ;
 		lv2:name "Phaser Daft" ;
 		lv2:default 0.0 ;
@@ -509,7 +517,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 59 ;
+		lv2:index 60 ;
 		lv2:symbol "DEL1_WET" ;
 		lv2:name "Delay Wet" ;
 		lv2:default 0.0 ;
@@ -517,7 +525,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 60 ;
+		lv2:index 61 ;
 		lv2:symbol "DEL1_DELAY" ;
 		lv2:name "Delay Delay" ;
 		lv2:default 0.5 ;
@@ -525,7 +533,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 61 ;
+		lv2:index 62 ;
 		lv2:symbol "DEL1_FEEDB" ;
 		lv2:name "Delay Feedback" ;
 		lv2:default 0.5 ;
@@ -533,7 +541,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 62 ;
+		lv2:index 63 ;
 		lv2:symbol "DEL1_BPM" ;
 		lv2:name "Delay BPM" ;
 		lv2:default 180.0 ;
@@ -541,7 +549,7 @@
 		lv2:maximum 360.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 63 ;
+		lv2:index 64 ;
 		lv2:symbol "DEL1_BPMSYNC" ;
 		lv2:name "Delay BPM (sync)" ;
 		lv2:portProperty lv2:toggled ;
@@ -550,7 +558,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 64 ;
+		lv2:index 65 ;
 		lv2:symbol "DEL1_BPMHOST" ;
 		lv2:name "Delay BPM (host)" ;
 		lv2:default 180.0 ;
@@ -560,7 +568,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 65 ;
+		lv2:index 66 ;
 		lv2:symbol "DYN1_COMPRESS" ;
 		lv2:name "Dynamic Compressor" ;
 		lv2:portProperty lv2:toggled ;
@@ -569,7 +577,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 66 ;
+		lv2:index 67 ;
 		lv2:symbol "DYN1_LIMITER" ;
 		lv2:name "Dynamic Limiter" ;
 		lv2:portProperty lv2:toggled ;
