@@ -5,6 +5,7 @@ ChangeLog
 
 SVN TRUNK
 
+- Preparations for variable env.stage time parameter. (TESTING)
 - Purging out some dead code (eg. non-looping, zero-crossing).
 
 
